<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:background="@color/lightest_coral">

    <ImageView
        android:id="@+id/splashIcon"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/splash_icon"
        android:src="@drawable/weight_" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splashIcon"
        android:layout_centerHorizontal="true"
        android:text="@string/splash_text"
        android:textSize="18sp"
        android:textStyle="italic"
        android:fontFamily="monospace"
        android:textColor="@color/light_coral"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/developer_text"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/light_coral"/>

</RelativeLayout>