<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".converterActivity"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/heightConvertingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/light_coral"
        android:text="@string/convert_your_height_into_cm"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/heightConverterContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_below="@+id/heightConvertingTxt"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/card_unselected_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/enter_your_height"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/feetTxt"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="7"
                android:inputType="numberDecimal"
                android:textColor="@color/grey"
                android:hint="@string/feet"
                android:textStyle="italic"
                android:fontFamily="monospace"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:autofillHints="" />
            <EditText
                android:id="@+id/inchTxt"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="7"
                android:textColor="@color/grey"
                android:inputType="numberDecimal"
                android:hint="@string/inches"
                android:textStyle="italic"
                android:fontFamily="monospace"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:importantForAutofill="no" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/heightInCmTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/grey"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cm"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/convertHeightBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"
            android:text="@string/convertx"
            android:textSize="18sp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/weightConverterTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/light_coral"
        android:layout_below="@+id/heightConverterContainer"
        android:layout_marginTop="20dp"
        android:text="@string/convert_your_height_into_cm"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/weightConverterContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/weightConverterTxt"
        android:padding="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/card_unselected_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:text="@string/enter_your_weight"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/weightInPounds"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="9"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:textColor="@color/grey"
            android:hint="@string/weight_pounds"
            android:textStyle="italic"
            android:fontFamily="monospace"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:importantForAutofill="no" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/weightInKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/grey"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/unitKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kg"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/convertWeightBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"
            android:text="@string/convert"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>