<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">
   <!--App Tittle-->
   <TextView
       android:id="@+id/AppName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="20dp"
       android:layout_centerHorizontal="true"
       android:text="@string/app_name"
       android:textColor="@color/light_coral"
       android:textSize="30sp"
       android:textStyle="bold" />
   <!--More Appliances-->
   <ImageView
       android:id="@+id/moreBtn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/genderContainerLayout"
       android:layout_alignParentTop="true"
       android:layout_marginStart="25dp"
       android:layout_marginBottom="20dp"
       android:layout_toEndOf="@+id/AppName"
       android:src="@drawable/more_grid_small"
       android:contentDescription="@string/more"/>

   <!--Gender Sector-->
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/genderContainerLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_below="@+id/AppName"
       android:padding="20dp"
       android:background="@drawable/layout_background"
       tools:ignore="UselessParent">

      <!--Male Selection Entity Code -->
      <LinearLayout
          android:id="@+id/linearLayoutMale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/card_unselected_background"
          android:gravity="start"
          android:orientation="vertical"
          android:padding="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="UseCompoundDrawables">

         <ImageView
             android:id="@+id/maleCardImage"
             android:layout_width="110dp"
             android:layout_height="90dp"
             android:contentDescription="@string/male_btn"
             android:src="@drawable/male" />

         <TextView
             android:id="@+id/maleText"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:text="@string/male_btn"
             android:textColor="@color/grey"
             android:textSize="25sp"
             android:textStyle="bold" />

      </LinearLayout>
      <!--Female Selection Entity Code -->
      <LinearLayout
          android:id="@+id/linearLayoutFemale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/card_unselected_background"
          android:gravity="end"
          android:orientation="vertical"
          android:padding="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="UseCompoundDrawables">

         <ImageView
             android:id="@+id/femaleCardImage"
             android:layout_width="110dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
             android:contentDescription="@string/female_btn"
             android:src="@drawable/femenine_symbol" />

         <TextView
             android:id="@+id/femaleText"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:text="@string/female_btn"
             android:textColor="@color/grey"
             android:textSize="25sp"
             android:textStyle="bold" />
      </LinearLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>
   <!--Height Sector-->
   <LinearLayout
       android:id="@+id/layoutHeightContainer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:background="@drawable/layout_background"
       android:layout_below="@+id/genderContainerLayout"
       android:layout_marginTop="10dp">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="@string/height"
          android:textSize="25sp"
          android:textStyle="bold"
          android:textColor="@color/light_coral"/>
      <LinearLayout
          android:id="@+id/heightContainer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:orientation="horizontal">
         <TextView
             android:id="@+id/heightText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/default_height"
             android:textSize="25sp"
             android:textStyle="bold"
             android:textColor="@color/light_coral"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_marginStart="5dp"
             android:text="@string/default_height_unit"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/light_coral"/>
      </LinearLayout>
      <SeekBar
          android:id="@+id/seekBar"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:max="300"
          android:progress="178"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="15dp"
          android:progressDrawable="@drawable/custom_seekbar_track"
          android:progressTint="@color/light_coral"
          android:thumb="@drawable/body_height"
          android:thumbTint="@color/light_coral" />
   </LinearLayout>
   <!--Weight and Age Sector-->
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/weightNAgeContainer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="10dp"
       android:padding="20dp"
       android:layout_below="@+id/layoutHeightContainer"
       android:background="@drawable/layout_background"
       tools:ignore="UselessParent">
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="start"
          android:orientation="vertical"
          android:padding="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          tools:ignore="MissingConstraints,UseCompoundDrawables">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:text="@string/weight"
             android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/light_coral"
            android:textStyle="bold"/>
         <TextView
             android:id="@+id/defaultWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/default_weight"
             android:layout_marginTop="5dp"
             android:layout_gravity="center"
             android:textSize="45sp"
             android:textColor="@color/light_coral"
             android:textStyle="bold"/>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

            <ImageView
                android:id="@+id/weightIncrementBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/plus_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/weight" />
            <ImageView
                android:id="@+id/weightDecrementBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/minus_circle"
                android:contentDescription="@string/weight" />

         </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="start"
          android:orientation="vertical"
          android:padding="10dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          tools:ignore="MissingConstraints,UseCompoundDrawables">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/age"
             android:layout_gravity="center"
             android:textSize="20sp"
             android:textColor="@color/light_coral"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/defaultAge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="@string/default_age"
             android:layout_gravity="center"
             android:textSize="45sp"
             android:textColor="@color/light_coral"
             android:textStyle="bold"/>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">

            <ImageView
                android:id="@+id/ageIncrementBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/plus_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/age" />
            <ImageView
                android:id="@+id/ageDecrementBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/minus_circle"
                android:contentDescription="@string/age"/>

         </androidx.constraintlayout.widget.ConstraintLayout>
      </LinearLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>
   <!--Button for Calculations-->
   <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/calculateBMIBtn"
       android:layout_width="match_parent"
       android:layout_height="55dp"
       android:layout_alignParentBottom="true"
       android:text="@string/calculate"
       android:textColor="@color/white"
       android:textSize="18sp"
       android:textStyle="bold"
       android:elevation="20dp"
       android:clickable="true"
       android:background="@drawable/button_background"
       android:focusable="true" />

</RelativeLayout>